--- a/NN_Assignment01.ipynb
+++ b/NN_Assignment01.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <h1>I have not studied Data Anylitical course so this dataset is complete new for me</h1>"
+    " <h1>Please find my work and best finding in this Updated Assignment.</h1>"
    ]
   },
   {
