Updated verson with comments of first assignment

--- a/NN_Assignment01Updated.ipynb
+++ b/NN_Assignment01Updated.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " <h1>I have not studied Data Anylitical course so this dataset is complete new for me</h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 434,
    "metadata": {},
@@ -26,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <h1>I have not studied Data Anylitical course so this dataset is complete new for me</h1>"
+    " <h3>This is my updated version of first assignment, There is my best findings and all that I applied, Please look into comments underneath and also there is code as well. Thank you</h3>"
    ]
   },
   {
